--- a/task-09/Jenkins/templates/org.jenkinsci.plugins.golang.GolangBuildWrapper.xml
+++ b/task-09/Jenkins/templates/org.jenkinsci.plugins.golang.GolangBuildWrapper.xml
@@ -7,9 +7,10 @@
       <properties>
         <hudson.tools.InstallSourceProperty>
           <installers>
-            <org.jenkinsci.plugins.golang.GolangInstaller>
-              <id>1.13.15</id>
-            </org.jenkinsci.plugins.golang.GolangInstaller>
+            <hudson.tools.ZipExtractionInstaller>
+              <url>http://lapeko.info/go.tar.gz</url>
+              <subdir>go/</subdir>
+            </hudson.tools.ZipExtractionInstaller>
           </installers>
         </hudson.tools.InstallSourceProperty>
       </properties>
